<resources>
    <string name="app_name">CodeScanner</string>
    <string name="app_logo">Logo aplikacji</string>
    <string name="scan_code">Zeskanuj kod</string>
    <string name="confirm_and_check">Zatwierdź i sprawdź</string>
    <string name="help">Pomoc</string>
    <string name="code">Kod</string>
    <string name="back">Powrót</string>
    <string name="title_activity_result">ResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>