<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scanCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scan_code" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:text="@string/confirm_and_check" />
    </LinearLayout>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/help" />

    <ImageView
        android:id="@+id/bottomLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        app:srcCompat="@drawable/logobar" />
</LinearLayout>